# ConfigIO

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/ConfigIO/: Config.h  ConfigFile.h
src/: ConfigFile.cpp  ConfigFile.h
src/ConfigIO/: Config.cpp  ConfigFile.cpp
